Gallery position Fixed on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10590,7 +10590,7 @@ Font load
   }
 }
 @media screen and (max-width: 480px) {
-  .mfp-container{
+  .mfp-with-zoom.mfp-img-mobile{
     position: fixed;
   }
   footer.ori-sponsor-section-1{
